adding separate stroke and fill colors for outliers and mean

--- a/css/px-vis-boxplot-light-theme-styles.html
+++ b/css/px-vis-boxplot-light-theme-styles.html
@@ -1,7 +1,7 @@
 <dom-module id="px-vis-boxplot-light-theme-styles">
 <template>
 <style>
-html{--px-vis-box-whisker-fill-color:#bc385e;--px-vis-box-whisker-stroke-color:#bc385e;--px-vis-box-whisker-median-color:#ecbfe5;--px-vis-box-whisker-mean-color:white;--px-vis-box-whisker-outlier-color:white;--px-vis-threshold-color:#7bbc00;--px-vis-gridlines-color:#d8e0e5;--px-vis-axis-color:#677e8c;--px-vis-axis-title-color:#677e8c}
+html{--px-vis-box-whisker-fill-color:#bc385e;--px-vis-box-whisker-stroke-color:#bc385e;--px-vis-box-whisker-median-color:#ecbfe5;--px-vis-box-whisker-mean-color:#bc385e;--px-vis-box-whisker-mean-fill-color:white;--px-vis-box-whisker-outlier-color:#bc385e;--px-vis-box-whisker-outlier-fill-color:transparent;--px-vis-threshold-color:#7bbc00;--px-vis-gridlines-color:#d8e0e5;--px-vis-axis-color:#677e8c;--px-vis-axis-title-color:#677e8c}
 </style>
 </template>
 </dom-module>
