adding tooltip building for boxes

--- a/demo/px-vis-boxplot-demo.html
+++ b/demo/px-vis-boxplot-demo.html
@@ -55,11 +55,7 @@
           x-axis-config="[[props.xAxisConfig.value]]"
           y-axis-config="[[props.yAxisConfig.value]]"
           threshold-data="[[props.thresholdData.value]]"
-          threshold-config="[[props.thresholdConfig.value]]"
-          on-box-mouseover="_handleBoxMouseover"
-          on-box-mouseout="_handleBoxMouseout"
-          on-outlier-mouseover="_handleOutlierMouseover"
-          on-outlier-mouseout="_handleOutlierMouseout">
+          threshold-config="[[props.thresholdConfig.value]]">
         </px-vis-boxplot>
         <div>
           <button on-click="_add">Add</button>
@@ -280,26 +276,6 @@
         }
       }
 
-    },
-
-    _handleBoxMouseover: function(event, data) {
-      console.info('box whisker mouseover');
-      console.info(data);
-    },
-
-    _handleBoxMouseout: function(event, data) {
-      console.info('box whisker mouseout');
-      console.info(data);
-    },
-
-    _handleOutlierMouseover: function(event, data) {
-      console.info('outlier mouseover');
-      console.info(data);
-    },
-
-    _handleOutlierMouseout: function(event, data) {
-      console.info('outlier mouseout');
-      console.info(data);
     },
 
     _add: function() {
