using px symbols for mean and outliers, adding customize props to series config

--- a/demo/px-vis-boxplot-demo.html
+++ b/demo/px-vis-boxplot-demo.html
@@ -218,7 +218,20 @@
           'series3': {
             'name': 'Series 3',
             'x': 'position',
-            'y': 'data'
+            'y': 'data',
+            'color': '#388bbc',
+            'strokeColor': '#388bbc',
+            'outlierStrokeColor': 'purple',
+            'outlierFillColor': '#388bbc',
+            'medianColor': '#58c1ff',
+            'meanStrokeColor': '#FFF',
+            'meanFillColor': '#1F31ff',
+            'outlierSymbol': 'star',
+            'outlierSize': 10,
+            'outlierScale': 2,
+            'meanSymbol': 'diamond',
+            'meanSize': 15,
+            'meanScale': 2.5
           }
         }
       },
