adding tests for seriesConfig and export image

--- a/test/px-vis-boxplot-fixture.html
+++ b/test/px-vis-boxplot-fixture.html
@@ -25,6 +25,8 @@
     <script src="thresholds.js"></script>
     <script src="box-whisker-config-test.js"></script>
     <script src="orientation.js"></script>
+    <script src="series-config-tests.js"></script>
+    <script src="export-image-tests.js"></script>
 
   </body>
 </html>
